--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     crossorigin="" />
 
   <!-- Our CSS -->
-  <link rel="stylesheet" type="text/css" href="static/css/style.css">
+  <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 
 <body>
@@ -28,7 +28,8 @@
   <!-- D3 JavaScript -->
   <script src="https://d3js.org/d3.v7.min.js"></script>
   <!-- Our JavaScript -->
-  <script type="text/javascript" src="static/js/logic.js"></script>
+  <script type="text/javascript" src="Leaflet-Part-1/static_1/js_1/logic_1.js"></script>
+ <script type="text/javascript" src="Leaflet-Part-2/static_2/js_2/logic_2.js"></script>
 </body>
 
 </html>
